# vrchat-join-manager

./: .gitignore  Makefile  README.md  pyproject.toml
agent/: Makefile  README.md  go.mod  go.sum  installer.iss  oapi-codegen.yaml
api/: openapi.yaml
client/: api_client.py  debug_runner.py  log_parser.py  log_watcher.py  main.py
launcher/: go.mod  main.go
server/: Makefile  db.py  go.mod  go.sum  main.go  main.py  models.py  oapi-codegen.yaml  pyproject.toml  utils.py
server/cmd/server/: main.go
server/internal/config/: config.go
server/internal/db/: db.go  schema.sql
server/internal/db/migrations/: 00001_init.sql  00002_add_sessions_is_estimated_join.sql
server/internal/domain/: checkin.go  checkin_test.go  location.go
server/internal/handler/: analytics.go  checkin_test.go  conv.go  events.go  groups.go  instances.go  locations.go  players.go  server.go  static.go  worlds.go
server/internal/repository/: analytics.go  events.go  groups.go  instances.go  locations.go  players.go  types.go  worlds.go
server/internal/timeutil/: utc.go
server/models/: analytics.py  common.py  events.py  groups.py  locations.py  players.py  worlds.py
server/repositories/: analytics.py  events.py  groups.py  instances.py  locations.py  players.py  worlds.py
server/routers/: analytics.py  events.py  groups.py  locations.py  players.py  worlds.py
server/static/: app.js  compare.html  index.html  player.html  player.js
server/static/css/: app.css  common.css  compare.css  player.css
server/static/js/: app.js  compare.js  player.js  utils.js
web/: .gitignore  (+7 more)
(+66 files in other folders)
